--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 	<nav class="navbar navbar-light bg-light navbar navbar-expand-sm bg-light">
   			<a class="navbar-brand" href="#">
-    			<img src="file:///home/user/Desktop/Bhadra/buildlogo.png" width="120" height="50" alt="">
+    			<img src="buildlogo.png" width="120" height="50" alt="">
   			</a>
         		<ul class="navbar-nav ml-auto"> 
             			<li class="nav-item"> 
@@ -51,10 +51,10 @@
   			</ol>
   			<div class="carousel-inner">
     				<div class="carousel-item active">
-      					<img class="d-block w-100" src="file:///home/user/Downloads/carousel.png" alt="First slide">
+      					<img class="d-block w-100" src="carousel.png" alt="First slide">
     				</div>
     				<div class="carousel-item">
-      					<img class="d-block w-100" src="file:///home/user/Downloads/carousel2.png" alt="Second slide">
+      					<img class="d-block w-100" src="carousel2.png" alt="Second slide">
     				</div>
   			</div>
   			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -158,7 +158,7 @@
 	<footer class="text-center text-lg-start bg-light text-muted">
   		<section class="p-3 border-bottom">
   		<div>
-  		<img src="file:///home/user/Downloads/footer.png" width="250" height="50" alt="image">
+  		<img src="footer.png" width="250" height="50" alt="image">
   		</div>
     	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
