--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   			</a>
         		<ul class="navbar-nav ml-auto"> 
             			<li class="nav-item"> 
-                			<a class="nav-link" href="file:///home/user/Desktop/Bhadra/bootstrap/B3.html"> 
+                			<a class="nav-link" href="B3.html"> 
                  		 	Home
                 			</a> 
             			</li> 
