--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 			</a> 
             			</li> 
             			<li class="nav-item"> 
-                			<a class="nav-link" href="file:///home/user/Desktop/Bhadra/bootstrap/B4.html"> 
+                			<a class="nav-link" href="B4.html"> 
                   			Register
                 			</a> 
             			</li> 
             			<li class="nav-item"> 
-                			<a class="nav-link" href="file:///home/user/Desktop/Bhadra/bootstrap/B5.html"> 
+                			<a class="nav-link" href="B5.html"> 
                   			Mentors
                 			</a> 
             			</li> 
