--- a/B3.html
+++ b/B3.html
@@ -11,10 +11,10 @@
   			</ol>
   			<div class="carousel-inner">
     				<div class="carousel-item active">
-      					<img class="d-block w-100" src="file:///home/user/Downloads/carousel.png" alt="First slide">
+      					<img class="d-block w-100" src="carousel.png" alt="First slide">
     				</div>
     				<div class="carousel-item">
-      					<img class="d-block w-100" src="file:///home/user/Downloads/carousel2.png" alt="Second slide">
+      					<img class="d-block w-100" src="carousel2.png" alt="Second slide">
     				</div>
   			</div>
   			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
